--- a/style/landing-page.css
+++ b/style/landing-page.css
@@ -17,6 +17,8 @@ header h2{
     width: 100vw;
     height: 100vh;
     overflow: hidden;
+    background-color: white;
+    z-index: 3;
 }
 
 .landing h1{
