--- a/style/style.css
+++ b/style/style.css
@@ -1,6 +1,7 @@
 body, h1, h2{
     margin: 0;
-    cursor: none;
+    /* cursor: none; */
+    cursor: url(../assets/cursor.png), default;
     overflow-x: hidden;
 }
 
@@ -9,8 +10,9 @@ body, h1, h2{
     border: solid 1px #ccc;
     width: 60px; 
     height: 60px; 
-    border-radius: 50%;  
-    z-index: 5;
+    border-radius: 50%; 
+    z-index: 1;
+    background-color: transparent;
 }
 
 main{
