--- a/style/style.css
+++ b/style/style.css
@@ -1,18 +1,7 @@
 body, h1, h2{
     margin: 0;
-    /* cursor: none; */
-    cursor: url(../assets/cursor.png), default;
+    cursor: url(../assets/cursor.png) , default;
     overflow-x: hidden;
-}
-
-.cursor {
-    position: absolute;
-    border: solid 1px #ccc;
-    width: 60px; 
-    height: 60px; 
-    border-radius: 50%; 
-    z-index: 1;
-    background-color: transparent;
 }
 
 main{
@@ -21,4 +10,9 @@ main{
 
 footer{
     text-align: center;
+}
+
+a{
+    text-decoration: none;
+    color: black;
 }
