--- a/style/first-page.css
+++ b/style/first-page.css
@@ -8,6 +8,35 @@
     left: 20vw;
     height: 45vh;
     z-index: -1;
+    filter: blur(4px);
+}
+
+.blueRectSide{
+    position: absolute;
+    right: 3vw;
+    bottom: -80vh;
+    width: 40vh;
+    z-index: -1;
+    animation: blueRectRotate 15s linear infinite;
+    filter: blur(4px);
+}
+
+@keyframes blueRectRotate {
+    0%{
+        transform: rotate(-5deg);
+        right: 3vw;
+        width: 40vh;
+    }
+    50%{
+        transform: rotate(5deg);
+        right: 0vw;
+        width: 46vh;
+    }
+    100%{
+        transform: rotate(-5deg);
+        right: 3vw;
+        width: 40vh;
+    }
 }
 
 .first-page .project{
@@ -20,14 +49,25 @@
     width: 50%;
 }
 
+.first-page .project-right{
+    background-color: rgba(255, 230, 254, 0.25);
+}
+
+.first-page .project-left{
+    background-color: rgba(230, 240, 255, 0.25);
+}
+
 .first-page .project:hover{
-    background-color: rgba(0,0,0, 0.05);
+    background-color: rgba(255, 255, 255, 0.5);
     cursor: url(../assets/cursor2.png), default;
     width: 200%;
 }
 
 .first-page .project h3{
     display: flex;
+    font-family: 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    font-weight: 600;
+    font-size: 1.8em;
 }
 
 .first-page .project:hover > h3{
@@ -62,12 +102,15 @@
     }
 }
 
-.first-page .project .project-content div{
-    width: 40%;
-}
-
 .first-page .project .project-content img{
     width: 40%;
+    box-shadow: rgba(50, 50, 93, 0.5) 0px 6px 12px -2px, rgba(0, 0, 0, 0.6) 0px 3px 7px -3px;
+    transition: 0.4s ease;
+}
+
+.first-page .project .project-content img:hover{
+    cursor: url(../assets/cursorZoomed.png), default;
+    transform: scale(1.1);
 }
 
 .first-page .project .project-content .project-informations{
@@ -75,4 +118,19 @@
     flex-direction: column;
     justify-content: space-around;
     height: 100%;
+    width: 40%;
+    font-family: monospace;
+    font-weight: 100;
+    font-size: 1.2em;
+    word-spacing: 5;
+    line-height: 2em;
+}
+
+.project-name{
+    font-style: italic;
+    font-weight: 700;
+}
+
+.important-word{
+    text-decoration: underline;
 }
