--- a/style/landing-page.css
+++ b/style/landing-page.css
@@ -1,17 +1,35 @@
 header{
     width: 100vw;
     position: absolute;
+    display: flex;
+    justify-content: space-between;
 }
 
 header h2{
     font-family: 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     font-weight: 600;
     font-size: 1.8em;
-    padding: 15px 25px;
+    margin: 15px 45px;
+    padding: 0px 10px;
+    transition: ease 0.4s;
+}
+
+header .contact{
+    background-color: rgba(255, 70, 170,0.1);
+    border-radius: 10px;
+}
+
+header .contact a{
+    color:rgba(255, 70, 170, 1);
+}
+
+header .contact:hover{
+    background-color: rgba(255, 70, 170,0.2);
 }
 
 .landing{
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
     width: 100vw;
@@ -29,19 +47,17 @@ header h2{
     justify-content: flex-start;
     align-items: baseline;
     padding: 0;
-    animation: fade 1s ease;
 }
 
-@keyframes fade{
-    from{
-        position:absolute;
-        opacity: 0;
-        top: 45vh;
-    }
-    to{
-        opacity: 1;
-        top: 51vh;
-    }
+.presentation-sentence{
+    width: 45vw;
+    text-align: center;
+    display: flex;
+    z-index: 5;
+    font-family: monospace;
+    font-weight: 700;
+    font-size: 1.2em;
+    color: #a4a4a4;
 }
 
 .landing h1 .writingAnim{
