--- a/style/style.css
+++ b/style/style.css
@@ -1,3 +1,7 @@
+html{
+    scroll-behavior: smooth;
+}
+
 body, h1, h2{
     margin: 0;
     cursor: url(../assets/cursor.png) , default;
@@ -10,6 +14,7 @@ main{
 
 footer{
     text-align: center;
+    padding-top: 75px;
 }
 
 a{
