--- a/style/techs-page.css
+++ b/style/techs-page.css
@@ -3,7 +3,7 @@
     flex-direction: column;
     align-items: center;
     justify-content: space-around;
-    height: 100vh;
+    height: fit-content;
 }
 
 .techs-page h2{
