styling second-page

--- a/style/techs-page.css
+++ b/style/techs-page.css
@@ -6,6 +6,10 @@
     height: fit-content;
 }
 
+.techs-page h2{
+    padding: 50px 0px;
+}
+
 .techs-list{
     display: flex;
     flex-direction: row;
