--- a/style/second-page.css
+++ b/style/second-page.css
@@ -18,9 +18,13 @@
     transition: .4s ease;
 }
 
-.second-page div:hover{
+.second-page .project:nth-child(2n):hover{
+    background-color: rgba(60, 196, 255, 0.1);
+}
+
+.second-page .project:hover{
     cursor: url(../assets/cursor2.png), default;
-    background-color: rgb(248, 248, 248);
+    background-color: rgba(255, 70, 170, 0.1);
 }
 
 @media (max-width:700px) {
