--- a/style/contact-page.css
+++ b/style/contact-page.css
@@ -9,4 +9,23 @@
 
 .infos{
     margin: auto;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+}
+
+.infos .mail{
+    cursor: text;
+    background-color: rgba(60, 196, 255,0.2);
+    transition: ease 0.3s;
+}
+
+.infos .mail:hover{
+    background-color: rgba(255, 70, 170, 0.2);
+}
+
+.infos div p{
+    font-size: 1.3em;
 }
