--- a/style/first-page.css
+++ b/style/first-page.css
@@ -50,11 +50,11 @@
 }
 
 .first-page .project-right{
-    background-color: rgba(0, 0, 0, 0.03);
+    background-color: rgba(0, 0, 0, 0.02);
 }
 
 .first-page .project-left{
-    background-color: rgba(0, 0, 0, 0.02);
+    background-color: rgba(0, 0, 0, 0.01);
 }
 
 .first-page .project:hover{
@@ -104,12 +104,17 @@
 transition: 0.4s ease;
 }
 
-.first-page .project-left .project-content img{
+.first-page .project-left .project-content .image-project{
     width: 40%;
     box-shadow: rgba(50, 50, 93, 0.5) 0px 6px 12px -2px, rgba(0, 0, 0, 0.6) 0px 3px 7px -3px;
 }
 
-.first-page .project-right .project-content img{
+.first-page .project-right .project-content .image-project{
+    width: 20%;
+    box-shadow: rgba(50, 50, 93, 0.5) 0px 6px 12px -2px, rgba(0, 0, 0, 0.6) 0px 3px 7px -3px;
+}
+
+.first-page .project-right .project-content .techs-used img{
     width: 20%;
 }
 
